<resources>
    <string name="about_contact_email">helpdesk@smart4health.eu</string>
    <string name="about_developedBy"><![CDATA[Developed by]]></string>
    <string name="about_page_emailTo_string">helpdesk@smart4health.eu</string>
    <string name="about_page_email_Intent">Send mail…</string>
    <string name="about_page_string_email_subject">CitizenHub: Issue Report</string>
    <string name="activity_lobby_button_login">Login</string>
    <string name="activity_splash_citizen_hub_logo">Citizen hub logo</string>
    <string name="activity_splash_citizen_hub_text">CITIZEN HUB</string>
    <string name="app_name">Citizen Hub</string>
    <string name="authentication_fragment_img_s4h_logo_image_content">img_s4h_logo</string>
    <string name="authentication_fragment_login_requirement_text">CitizenHub requires you to register and login in the Smart4Health platform.</string>
    <string name="authentication_fragment_login_text_view">Your health and wellbeing data in one place</string>
    <string name="authentication_fragment_orange_circular_shape">Orange circular Shape</string>
    <string name="authentication_fragment_text_login">login</string>
    <string name="authentication_fragment_text_powered_by">powered by</string>
    <string name="citizen_hub_logo_with_text">logo with text</string>
    <string name="content_description_activity_main_img_s4h_logo">TODO</string>
    <string name="content_description_activity_main_side_logo">TODO</string>
    <string name="content_description_citizen_hub_logo_without_text">citizen hub logo without text</string>
    <string name="content_description_fragment_device_list_item_image_device">TODO</string>
    <string name="content_description_fragment_device_list_item_img_settings">TODO</string>
    <string name="content_description_fragment_logout_imageView_s4h">Smart4Health</string>
    <string name="content_description_fragment_pairing_guide_image">Pairing Guide Image</string>
    <string name="content_description_fragment_report_master_logo">TODO</string>
    <string name="content_description_fragment_summary_ic_heartbeat">TODO</string>
    <string name="content_description_fragment_summary_image_view_calories">TODO</string>
    <string name="content_description_fragment_summary_image_view_distance">TODO</string>
    <string name="content_description_fragment_summary_image_view_heart_rate">TODO</string>
    <string name="content_description_fragment_summary_image_view_posture">TODO</string>
    <string name="content_description_fragment_summary_image_view_steps">TODO</string>
    <string name="content_description_fragment_summary_img_caloriess">TODO</string>
    <string name="content_description_slide_screen_left_arrow">left arrow</string>
    <string name="content_description_slide_screen_right_arrow">content description right arrow</string>
    <string name="content_description_splash_activity_ind_circle">TODO</string>
    <string name="content_descrition_citizen_hub_logo_without_text">citizen hub logo without text</string>
    <string name="content_descrition_splash_activity_ind_circle">TODO</string>
    <string name="date_month_01">January</string>
    <string name="date_month_02">February</string>
    <string name="date_month_03">March</string>
    <string name="date_month_04">April</string>
    <string name="date_month_05">May</string>
    <string name="date_month_06">June</string>
    <string name="date_month_07">July</string>
    <string name="date_month_08">August</string>
    <string name="date_month_09">September</string>
    <string name="date_month_10">October</string>
    <string name="date_month_11">November</string>
    <string name="date_month_12">December</string>
    <string name="dialog_connection_bluetooth_textview">Bluetooth</string>
    <string name="dialog_connection_button_submit">Search</string>
    <string name="dialog_connection_search_text">Please select the method of connection compatible with your device</string>
    <string name="dialog_connection_search_title">Method of Connection</string>
    <string name="dialog_connection_wearos_textview">WearOS</string>
    <string name="fragment_about_button_image_view_uninova_logo">uninova_logo</string>
    <string name="fragment_about_button_text_licenses_of_use">terms and conditions</string>
    <string name="fragment_about_button_text_open_source_licenses_fragment">Open Source License info</string>
    <string name="fragment_about_button_text_privacy_policy_button">privacy policy</string>
    <string name="fragment_about_contact_email">citizenhub@uninova.pt</string>
    <string name="fragment_about_developedBy"><![CDATA[Developed by]]></string>
    <string name="fragment_about_european_commission_info">This work has been developed by SMART4HEALTH project funded by the European Union\'s Horizon 2020 research and innovation programme under grant agreement No 826117</string>
    <string name="fragment_about_image_view__kbz_logo">KBZ_Logo</string>
    <string name="fragment_about_image_view_citizenhub_logo">Citizenhub logo</string>
    <string name="fragment_about_image_view_european_commission_logo">EU commission logo</string>
    <string name="fragment_about_image_view_logo_kbz">kbz logo</string>
    <string name="fragment_about_label">About</string>
    <string name="fragment_about_text_view_versioning">version: 0.1.0</string>
    <string name="fragment_authentication_button_login">login</string>
    <string name="fragment_authentication_img_s4h_logo_image_content">img_s4h_logo</string>
    <string name="fragment_authentication_login_requirement_text">CitizenHub requires you to register and login in the Smart4Health platform</string>
    <string name="fragment_authentication_login_text_view">Collect health and well-being data in a single app</string>
    <string name="fragment_authentication_orange_circular_shape">Orange circular Shape</string>
    <string name="fragment_authentication_text_login">login</string>
    <string name="fragment_authentication_text_powered_by">powered by</string>
    <string name="fragment_configuration_text_view_address">%1$s</string>
    <string name="fragment_configuration_text_view_connect">Connect</string>
    <string name="fragment_configuration_text_view_name">%1$s</string>
    <string name="fragment_configuration_text_view_update">Update</string>
    <string name="fragment_device_connect_button">Connect</string>
    <string name="fragment_device_add_info_text">Info</string>
    <string name="fragment_device_add_label">Add Device</string>
    <string name="fragment_device_configuration_add_label">About Smart4Health</string>
    <string name="fragment_device_configuration_label">Device Configuration</string>
    <string name="fragment_device_detail_button_forget">forget device</string>
    <string name="fragment_device_detail_label">Device Detail</string>
    <string name="fragment_device_detail_text_info">implement on/off, forget device, mac address, device name, select functions, sample rate, etc.</string>
    <string name="fragment_device_list_button_search">Search Devices</string>
    <string name="fragment_device_list_item_text_description">Description</string>
    <string name="fragment_device_list_item_text_title">Title</string>
    <string name="fragment_device_list_label">Devices</string>
    <string name="fragment_device_list_text_no_data">No devices connected.</string>
    <string name="fragment_device_search_bluetooth_disable_button">Don\'t turn on bluetooth</string>
    <string name="fragment_device_search_bluetooth_not_enabled_title">Bluetooth not enabled</string>
    <string name="fragment_device_search_bluetooth_open_settings_button">Open settings</string>
    <string name="fragment_device_search_bluetooth_refuse_enabling">Cancel</string>
    <string name="fragment_report_label">Daily Activity Reports</string>
    <string name="fragment_report_text_view_no_data_summary">You don\'t seem to have any data for today.\n\nDo you have your devices connected?</string>
    <string name="fragment_summary_label">Today\'s Activity</string>
    <string name="fragment_summary_text_view_heart_rate_text">%1$.0f bpm</string>
    <string name="fragment_user_label">User Profile</string>
    <string name="layout_activity_add_device_address">Address</string>
    <string name="layout_activity_add_device_name">Name</string>
    <string name="layout_activity_add_device_priority">Priority: </string>
    <string name="layout_activity_add_device_submit">SUBMIT</string>
    <string name="layout_nav_header_main_logo_content_description">Smart 4 Health icon</string>
    <string name="layout_nav_header_main_poweredby">Powered By</string>
    <string name="medex_fragment_explanation_textview">Press the button below to find the machine you trained on.</string>
    <string name="fragment_medex_button_search">search</string>
    <string name="medex_fragment_explanation2">If you are not a medex user or want to hide this content, you can always change it in the settings.</string>
    <string name="heart_rate_title">Average heart rate</string>
    <string name="posture_title">Posture</string>
    <string name="posture_correct_label">Correct</string>
    <string name="posture_correct_value" translatable="false">%1$s</string>
    <string name="posture_incorrect_label">Incorrect</string>
    <string name="posture_incorrect_value" translatable="false">%1$s</string>
    <string name="activity_title">Activity</string>
    <string name="activity_steps_label">Steps</string>
    <string name="activity_steps_value">%1$d</string>
    <string name="activity_distance_label">Distance</string>
    <string name="activity_distance_value">%1$.0f m</string>
    <string name="activity_calories_label">Calories</string>
    <string name="activity_calories_value">%1$.0f kcal</string>
    <string name="blood_pressure_title">Blood pressure</string>
    <string name="blood_pressure_systolic_label">Systolic</string>
    <string name="blood_pressure_systolic_value" translatable="false">%1$.0f mmHg</string>
    <string name="blood_pressure_diastolic_label">Diastolic</string>
    <string name="blood_pressure_diastolic_value" translatable="false">%1$.0f mmHg</string>
    <string name="lumbar_training_title">Lumbar extension training</string>
    <string name="lumbar_training_duration_label">Duration</string>
    <string name="lumbar_training_duration_value" translatable="false">%1$s</string>
    <string name="lumbar_training_repetitions_label">Repetitions</string>
    <string name="lumbar_training_repetitions_value" translatable="false">%1$d</string>
    <string name="lumbar_training_weight_label">Weight</string>
    <string name="lumbar_training_weight_value" translatable="false">%1$d kg</string>
    <string name="lumbar_training_calories_label">Calories</string>
    <string name="lumbar_training_calories_value" translatable="false">%1$.2f kcal</string>
    <string name="smart4health_description">Smart4Health enables citizens to manage and bridge their own health data throughout the EU and beyond, advancing own and societal health and well-being.</string>
    <string name="smart4health_automatic_uploads">Automatic Uploads</string>
    <string name="smart4health_automatic_uploads_description">Select this option if you want to automatically upload your daily information to the Smart4Health platform.</string>
    <string name="smart4health_information_to_send">Information included in the reports:</string>
    <string name="smart4health_information_to_send_description">The information selected will be sent to the Smart4Health platform.</string>
    <string name="smart4health_activity">Activity</string>
    <string name="smart4health_blood_pressure">Blood Pressure</string>
    <string name="smart4health_heart_rate">Heart Rate</string>
    <string name="smart4health_lumbar_extension_training">Lumbar Extension Training</string>
    <string name="smart4health_posture">Posture</string>
</resources>